--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "\"vue-cli-service build\" && json-server --watch products.json --port 3004",
     "lint": "vue-cli-service lint",
     "server": "json-server --watch products.json --port 3004"
   },
